@@ -6,6 +6,9 @@
 
                                   Changelog
 
+Yang Tse (21 Jul 2008)
+- Use the sreadfrom() wrapper to replace recvfrom() in our code.
+
 Yang Tse (20 Jul 2008)
 - when recvfrom prototype uses a void pointer for arguments 2, 5 or 6 this will
   now cause the definition, as appropriate, of RECVFROM_TYPE_ARG2_IS_VOID,
